# vanity_addresses_rust

./: .gitignore  Cargo.toml  README.md  notes.txt  results1.txt  results2.txt  results3.txt  results4.txt  results5.txt
src/: check.rs  load.rs  main.rs
